grunt, bower로 의존성 관리

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,15 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+ipynb
+*.ipynb
+
+#FRONTEND
+node_modules
+bower_components
+collected_static
+*.sqlite3
+*.rdb
+.env
+dev-*.sh
+media
