main navigation에 임시 로고, shy-navbar 적용

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "fastclick": "latest",
     "moment": "~2.11.1",
-    "html5shiv": "~3.7.3"
-//    "jqcloud2": "2.0.1"
+    "html5shiv": "~3.7.3",
+    "shy-navbar": "https://github.com/lqez/shy-navbar.git"
   }
 }
