datetimepicker 추가하고 밋업에 밋업 시간/날짜 필드 추가

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "fastclick": "latest",
     "moment": "~2.11.1",
     "html5shiv": "~3.7.3",
-    "shy-navbar": "https://github.com/lqez/shy-navbar.git"
+    "shy-navbar": "https://github.com/lqez/shy-navbar.git",
+    "curioussolutions-datetimepicker": "0.1.26"
   }
 }
