--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/milooy/hobbycoding/issues"
   },
   "homepage": "https://github.com/milooy/hobbycoding#readme",
-  "devDependencies": {
+  "dependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-csslint": "^0.5.0",
